# spray-trajectory-planning

./: .gitignore  BUGFIX_CACHE.md  CHANGELOG.md  CMakeLists.txt  COMMIT_MESSAGE.md  LICENSE  README.md  build_project.bat  build_test.bat  check_occ_version.cpp  vcpkg.json  测试主程序STEP导入修复.bat  测试恢复VTK后的主程序.bat
.github/workflows/: build.yml
archived/: README.md
archived/Unity/: OrbitCameraController.cs  PointCloudRenderer.cs  QtCommunication.cs  QtCommunicationSimple.cs  QtTestBasic.cs  README.md  UnityTestClient.py  Unity_Setup_Guide.md
archived/unity-docs/: PointCloud_Unity_Integration_Guide.md  unity-embedding-debug-guide.md  unity-embedding-simple-fix.md  unity-embedding-test-guide.md  unity-integration-test-guide.md  unity-project-setup-guide.md  unity-quick-test.md  unity-standalone-build-guide.md  unity-standalone-mode-guide.md  unity-startup-fix-guide.md  unity-window-embedding-guide.md  vtk-migration-guide.md  workpiece-loading-fix-guide.md
archived/unity-integration/: QtUnityBridge.cpp  QtUnityBridge.h  UnityWidget.cpp  UnityWidget.h
config/: paths.cmake
data/model/: .gitkeep  README.md
data/pointclouds/: .gitkeep  README.md
docs/: 3d-simulation-roadmap.md  Aubo_i5H_DH_Parameters.md  CPU性能优化实现报告.md  DH_Parameters_Summary.md  DIRECTORY_TREE.md  FINAL_REPORT.md  Implementation_Summary.md  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  Qt信号阻塞问题深度分析.md  Quick_Test_Guide.md  README_OPTIMIZATION.md  Robot_Kinematics_Implementation_Guide.md  SRC_STRUCTURE.md  STEP加载卡住问题用户指南.md  STEP加载性能优化.md  STEP导入崩溃修复方案.md  STEP导入崩溃修复进展.md  STEP导入崩溃问题最终修复.md  STEP导入崩溃问题最终修复方案.md  STEP导入问题最终状态.md  STEP导入阻塞问题最终修复.md  STEP崩溃问题调查总结.md  STEP模型树功能说明.md  STEP阻塞问题彻底修复方案.md  TransferRoots阻塞问题修复.md  Troubleshooting_Guide.md  Unity_Integration_Guide.md  Unity代码清理完成报告.md  Unity归档总结.md  VTK_Joint_Transform_Implementation.md  Windows中文编码问题解决方案.md  async-loading-implementation.md  async-loading-optimization-final.md  async-step-loading-solution.md  bug-fix-test-guide.md  cleanup-recommendations.md  design（react网页版本）.md  dock-panel-recovery-guide.md  module-dependency-diagram.md  (+42 more)
docs/task-summaries/: README.md  project-progress-summary.md  task-1.3-database-implementation.md  task-2.1-scan-data-receiver.md  task-2.2-batch-management.md  task-6.1-6.2-ui-development.md  task-6.3-unity-integration.md  task-async-loading-optimization.md  task-pointcloud-unity-integration.md  task-qt-ui-responsiveness.md  task-unity-optimization.md  unity-performance-optimization.md
scripts/: README.md  build_project.bat  debug_paths.bat  setup_environment.bat  upload_to_github.bat  verify_setup.bat
src/: main.cpp
src/Core/: Application.cpp  Application.h  CMakeLists.txt  ConfigManager.h  (+3 more)
src/Data/: BaseModel.cpp  BaseModel.h  BatchManager.cpp  BatchManager.h  CMakeLists.txt  DataModels.cpp  DataModels.h  DatabaseInitializer.cpp  DatabaseManager.cpp  PointCloudParser.h  STEPModelTree.cpp  STEPModelTree.h  STEPModelTreeWorker.h  STEPModelTree_old.cpp  TrajectoryData.h  TrajectoryPlanner.cpp  WorkpieceData.h
src/Data/Database/: BatchManager.cpp  BatchManager.h  CMakeLists.txt  DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseManager.cpp  DatabaseManager.h
src/Data/Models/: CMakeLists.txt  TrajectoryData.cpp  WorkpieceData.cpp  WorkpieceData.h
src/Data/PointCloud/: CMakeLists.txt  PointCloudParser.cpp  PointCloudProcessor.cpp  PointCloudProcessor.h  ScanDataReceiver.cpp  ScanDataReceiver.h
src/Data/STEP/: CMakeLists.txt  STEPModelTree.h  STEPModelTreeWorker.cpp
src/Data/Trajectory/: CMakeLists.txt  TrajectoryPlanner.h
src/Robot/: CMakeLists.txt  MotoTcpClient.cpp  MotoTcpClient.h  RobotControlPanel.cpp  RobotControlPanel.h  RobotController.cpp  RobotController.h  RobotKinematics.cpp  RobotKinematics.h
src/Robot/Control/: CMakeLists.txt  MotoTcpClient.cpp  ProgramGenerator.cpp  ProgramGenerator.h  RobotController.h
src/Robot/Kinematics/: CMakeLists.txt  DHParameters.cpp  DHParameters.h  README.md
src/Robot/UI/: CMakeLists.txt  RobotControlPanel.cpp  RobotControlPanel.h
src/Simulation/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  QualityPredictor.cpp  QualityPredictor.h  SimulationEngine.cpp  SimulationEngine.h
src/UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow_Simple.cpp  MainWindow_VTK.cpp  ModelTreeDockWidget.cpp  ModelTreeDockWidget.h  ParameterPanel.h  PointCloudLoader.cpp  PointCloudLoader.h  STEPModelTreeWidget.cpp  STEPModelTreeWidget.h  SafetyPanel.cpp  SafetyPanel.h  StatusPanel.cpp  VTKWidget.cpp  VTKWidget.h  WorkpieceManagerPanel.cpp  WorkpieceManagerPanel.h
src/UI/Loaders/: CMakeLists.txt  PointCloudLoader.cpp  PointCloudLoader.h
src/UI/ModelTree/: CMakeLists.txt  STEPLoadWorker.cpp  STEPLoadWorker.h  STEPModelTreeWidget.cpp  STEPModelTreeWidget.h
src/UI/Panels/: CMakeLists.txt  ParameterPanel.cpp  StatusPanel.h
src/UI/Visualization/: CMakeLists.txt  Simple3DWidget.cpp  Simple3DWidget.h  VTKWidget.cpp  VTKWidget.h
tests/: CMakeLists.txt  COMMIT_MESSAGE.md  basic_step_test.cpp  crash_debug_test.cpp  create_simple_step.py  create_simple_step_test.py  create_simple_stl.py  final_step_test.cpp  main_integration_test.cpp  minimal_occt_test.bat  minimal_occt_test.cpp  minimal_step_test.cpp  safe_step_test.bat  safe_step_test.cpp  safe_tree_gui_fixed.bat  safe_tree_gui_fixed.cpp  safe_tree_gui_test.bat  simple_step_test.cpp  step_crash_debug.bat  step_crash_debug.cpp  step_tree_only_test.bat  step_tree_only_test.cpp  test_async_chinese.bat  test_async_debug.bat  test_async_step_loading.bat  test_async_step_loading_en.bat  test_async_step_loading_updated.bat  test_console_encoding.bat  test_freecad_conversion.bat  test_freecad_simple.py  test_opencascade_simple.bat  test_opencascade_step.bat  test_optimized_async.bat  test_progress_bar.bat  test_quality_mode_fix.bat  test_robot_control.bat  test_signal_blocking_fix.bat  test_step_conversion_direct.py  test_step_conversion_simple.py  test_step_loading.bat  (+20 more)
tests/programs/: CMakeLists.txt  README.md  debug_async_main.cpp  test_async_step.cpp  test_opencascade.cpp  vtk_ply_test.cpp  vtk_test_main.cpp
(+11 files in other folders)
